@@ -39,6 +39,7 @@ runner_SOURCES = \
   test_sql_cursor.cxx \
   test_stateless_cursor.cxx \
   test_string_conversion.cxx \
+  test_subtransaction.cxx \
   test_test_helpers.cxx \
   test_thread_safety_model.cxx \
   runner.cxx
