@@ -16,6 +16,7 @@
  - Build fix for BSD (and possibly other grep flavours).
  - Supports C++11.
  - No longer has obsolete debian & RPM packaging built in.
+ - Fixed failure to abort uncommitted subtransactions on destruction.
  - Fixed failure to detect some integer overflows during conversion.
  - Build tooling uses /usr/bin/env python instead of /usr/bin/python.
 4.0
